# api.meguiaai

./: .gitignore  README.md  app.db  main.py  pyproject.toml  requirements.txt  start.sh  usecases.py
controllers/: models_controller.py
data/: .~lock.PJ. CIENTIFICO atualizado.docx#  PJ. CIENTIFICO atualizado.docx
helpers/tensorflow/: tensorflow_helper.py
src/: database.py  main.py  models.py  routers.py  schemas.py  usecases.py
src/data/: teste_escola.h5
src/helpers/: tensorflow_helper.py
usecases/: models_usecases.py
